attempt to fix bugged menu on ios

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -374,6 +374,7 @@ form div.upload .dropzone .showcase.active article p {
 }
 #menu.open {
     height: 100dvh;
+    bottom: 0;
     display: grid;
     grid-template-rows: min-content 1fr;
     grid-template-columns: 1fr;
@@ -431,6 +432,7 @@ form div.upload .dropzone .showcase.active article p {
     background-color: rgb(var(--palette-primary));
 }
 #menu nav.mobile {
+    height: 100%;
     flex-direction: column;
     gap: var(--spacing-l);
     justify-content: center;
